change of title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <div>Hello world!</div>
+    <div>Practice git!</div>
     <h1>this is just practice</h1>
     <span>This is to demonstrate that we have created a branch</span>
     <p>
